--- a/assets/css/steller.css
+++ b/assets/css/steller.css
@@ -11642,3 +11642,23 @@ pre {
 .section.bg-gray {
   background: white;
 }
+
+.cookie-banner {
+  background-color: #f1f1f1;
+  color: #333;
+  padding: 10px;
+  text-align: center;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: 9999;
+}
+
+.accept-cookies {
+  background-color: #4CAF50;
+  color: white;
+  padding: 10px 20px;
+  border: none;
+  cursor: pointer;
+}
